working navigation to searchPicto display result of search

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "d9cd7a5c-0f9c-47d0-bab5-7def2baaabb1"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
